--- a/style.css
+++ b/style.css
@@ -122,3 +122,130 @@ footer
     width: 420px;
     height: 230px;
 }
+
+
+@media screen and (min-width: 360px) and (min-height: 740px) 
+{
+    
+nav
+{
+    width: 100%;
+    padding: 20px;
+    background-color: rgb(50, 50, 119);
+    display: flex;
+    justify-content: space-around;
+}
+
+#nav-first
+{
+    margin-right: 15px;
+    font-size: 11px;
+}
+
+.nav-items
+{
+    align-items: center;
+    color: aliceblue;
+    font-size: 9px;
+}
+
+.img1
+{
+    width: 100%;
+    height: 670px;
+    mask-image: linear-gradient(to bottom,#000000 50%,transparent 100%);
+}
+
+section
+{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(237, 245, 242);
+}
+
+.about
+{
+    font-size: 30px;
+    color: goldenrod;
+    padding: 10px 0px;
+}
+
+footer
+{
+    background-color: #000000;
+    padding: 3px;
+    text-align: center;
+}
+
+.container
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(20px,1fr));
+    gap: 1px;
+    grid-auto-rows: minmax(30px,auto);
+    grid-auto-columns: minmax(80px,auto);
+    align-content: stretch;
+}
+
+.items
+{
+    align-items: center;
+    margin: 1px 3px;
+}
+
+#item1
+{
+    grid-column-start: 1;
+    grid-column-end: 18;
+    font-size: 10px;
+}
+
+#item2
+{
+    grid-row-start: 9;
+    grid-row-end: 12;
+    grid-column-start: 1;
+    grid-column-end: 18;
+    font-size: 12px;
+    text-align: justify;
+
+}
+
+#item3
+{
+    grid-row-start: 2;
+    grid-row-end: 9;
+    grid-column-start: 1;
+    grid-column-end: 18;
+    font-size: 12px;
+
+}
+
+.moment
+{
+    font-size: 30px;
+    color: goldenrod;
+    padding: 3px 0px;
+    margin-left: 3px;
+}
+
+.img4
+{
+    display: inline-block;
+    width: 360px;
+    height: 150px;
+    margin-left: 0px;
+}
+
+.imgg
+{
+    width: 360px;
+    height: 150px;
+}
+
+.img5
+{
+    height: 200px;
+}
+
+}
