--- a/style.css
+++ b/style.css
@@ -58,8 +58,13 @@ section
 footer
 {
     background-color: #000000;
-    padding: 20px;
+    padding: 15px;
     text-align: center;
+}
+
+footer p{
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
 
 .container
@@ -132,134 +137,6 @@ footer
     height: 230px;
 }
 
-
-/* 
-@media screen and (min-width: 360px) and (min-height: 740px) 
-{
-    
-nav
-{
-    width: 100%;
-    padding: 20px;
-    background-color: rgb(50, 50, 119);
-    display: flex;
-    justify-content: space-around;
-}
-
-#nav-first
-{
-    margin-right: 15px;
-    font-size: 11px;
-}
-
-.nav-items
-{
-    align-items: center;
-    color: aliceblue;
-    font-size: 9px;
-}
-
-.img1
-{
-    width: 100%;
-    height: 670px;
-    mask-image: linear-gradient(to bottom,#000000 50%,transparent 100%);
-}
-
-section
-{
-    width: 100%;
-    height: 100%;
-    background-color: rgb(237, 245, 242);
-}
-
-.about
-{
-    font-size: 30px;
-    color: goldenrod;
-    padding: 10px 0px;
-}
-
-footer
-{
-    background-color: #000000;
-    padding: 3px;
-    text-align: center;
-}
-
-.container
-{
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(20px,1fr));
-    gap: 1px;
-    grid-auto-rows: minmax(30px,auto);
-    grid-auto-columns: minmax(80px,auto);
-    align-content: stretch;
-}
-
-.items
-{
-    align-items: center;
-    margin: 1px 3px;
-}
-
-#item1
-{
-    grid-column-start: 1;
-    grid-column-end: 18;
-    font-size: 10px;
-}
-
-#item2
-{
-    grid-row-start: 9;
-    grid-row-end: 12;
-    grid-column-start: 1;
-    grid-column-end: 18;
-    font-size: 12px;
-    text-align: justify;
-
-}
-
-#item3
-{
-    grid-row-start: 2;
-    grid-row-end: 9;
-    grid-column-start: 1;
-    grid-column-end: 18;
-    font-size: 12px;
-
-}
-
-.moment
-{
-    font-size: 30px;
-    color: goldenrod;
-    padding: 3px 0px;
-    margin-left: 3px;
-}
-
-.img4
-{
-    display: inline-block;
-    width: 360px;
-    height: 150px;
-    margin-left: 0px;
-}
-
-.imgg
-{
-    width: 360px;
-    height: 150px;
-}
-
-.img5
-{
-    height: 200px;
-}
-
-} */
-
 #login
 {
     font-size: 2.5rem;
@@ -323,10 +200,11 @@ footer
 
 .containerevent
 {
-    display: inline-flex;
+    display: flex;
     justify-content: space-around;
     gap: 0.3rem;
     width: 79rem;
+    overflow: hidden;
 }
 
 .event
@@ -436,3 +314,251 @@ a #imgplus
     border: none;
     background-color: rgb(214, 225, 235);
 }
+
+
+
+/*media queries*/
+
+@media screen and (min-width: 360px) and (min-height: 740px) 
+{
+    
+nav
+{
+    width: 100%;
+    padding: 21px;
+    background-color: rgb(50, 50, 119);
+    display: inline-block;
+    justify-content: space-around;
+}
+
+#nav-first
+{
+    margin-right: 10rem;
+    font-size: 4.2rem;
+    margin-left: -10px;
+}
+
+.nav-items
+{
+    margin-top:35rem ;
+    color: aliceblue;
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+.img1
+{
+    width: 100%;
+    height: 500px;
+    mask-image: linear-gradient(to bottom,#000000 50%,transparent 100%);
+}
+
+section
+{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(237, 245, 242);
+}
+
+.about
+{
+    font-size: 40px;
+    color: goldenrod;
+    padding: 10px 0px;
+}
+
+footer
+{
+    background-color: #000000;
+    padding: 1px;
+    text-align: center;
+}
+
+.container
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(20px,1fr));
+    gap: 1px;
+    grid-auto-rows: minmax(30px,auto);
+    grid-auto-columns: minmax(80px,auto);
+    align-content: stretch;
+}
+
+.items
+{
+    align-items: center;
+    margin: 2px 5px;
+}
+
+#item1
+{
+    grid-column-start: 1;
+    grid-column-end: 18;
+    font-size: 10px;
+}
+
+#item2
+{
+    grid-row-start: 12;
+    grid-row-end: 20;
+    grid-column-start: 1;
+    grid-column-end: 18;
+    font-size: 18px;
+    text-align: justify;
+
+}
+
+#item3
+{
+    grid-row-start: 2;
+    grid-row-end: 12;
+    grid-column-start: 1;
+    grid-column-end: 18;
+    font-size: 12px;
+
+}
+
+.moment
+{
+    font-size: 30px;
+    color: goldenrod;
+    padding: 3px 0px;
+    margin-left: 3px;
+}
+
+.img4
+{
+    display: inline-block;
+    width: 360px;
+    height: 150px;
+    margin-left: 0px;
+}
+
+.imgg
+{
+    width: 360px;
+    height: 150px;
+}
+
+.img5
+{
+    height: 300px;
+}
+
+.containerevent
+{
+    display: block;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.event
+{
+    width: 18rem;
+    height: 15rem;
+    background-color: rgb(249, 252, 254);
+    border-radius: 1rem;
+    border: none;
+    box-shadow: 8px 8px 10px rgb(225, 238, 250);
+    display: flex;
+    flex-direction: column;
+}
+
+#register-now
+{
+    font-size: 2rem;
+    text-align: center;
+    color: rgb(217, 217, 224);
+    background-color:rgb(50, 50, 119);
+    padding: 1rem;
+}
+
+.ename
+{
+    font-size: 1.2rem;
+    font-weight: 400;
+    padding: 1rem;
+    color:rgb(50, 50, 119);
+}
+
+.descevent
+{
+    font-size: 0.8rem;
+    margin: -0.5rem 1rem 0.5rem 1rem;
+    font-display: justify;
+}
+
+.venueevent
+{
+    font-size: 1rem;
+    margin: 0.5rem 1rem;   
+}
+
+a #imgplus
+{
+    position: absolute;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin-left: 13rem;
+    margin-top: -0.2rem;
+    align-content: flex-end;
+}
+
+.container-newacc
+{
+    width: 20rem;
+    height: 35rem;
+    background-color: aliceblue;
+    border-radius: 2rem;
+    box-shadow: 10px 10px 30px rgb(210, 209, 209);
+    display: flex;
+    gap: 1.5rem;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    margin: 5rem 1.5rem;
+}
+
+.container-newacc-child
+{
+    padding: 0.8rem;
+    border-radius: 1rem;
+    border: 1px gainsboro;
+    width: 18rem;
+}
+
+.flexxacc
+{
+    display: flex;
+    gap: 0.8rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-newacc-child2
+{
+    padding: 0.8rem;
+    border-radius: 1rem;
+    border: 1px gainsboro;
+    width: 11rem;
+}
+
+.createheading
+{
+    font-size: 2rem;
+    color: rgb(50, 50, 119);
+    padding: 1rem;
+}
+
+.createbtn
+{
+    padding: 0.8rem;
+    font-size: 1.2rem;
+    width: 18rem;
+    border-radius: 2rem;
+    border: none;
+    background-color: rgb(214, 225, 235);
+}
+
+} 
