--- a/style.css
+++ b/style.css
@@ -560,5 +560,253 @@ a #imgplus
     border: none;
     background-color: rgb(214, 225, 235);
 }
+} 
+
+@media screen and (min-width: 412px) and (min-height: 914px) 
+{
+    
+nav
+{
+    width: 100%;
+    padding: 21px;
+    background-color: rgb(50, 50, 119);
+    display: inline-block;
+    justify-content: space-around;
+}
+
+#nav-first
+{
+    margin-right: 15rem;
+    font-size: 4.5rem;
+    margin-left: -10px;
+}
+
+.nav-items
+{
+    margin-top:35rem ;
+    color: aliceblue;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+.img1
+{
+    width: 100%;
+    height: 690px;
+    mask-image: linear-gradient(to bottom,#000000 50%,transparent 100%);
+}
+
+section
+{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(237, 245, 242);
+}
+
+.about
+{
+    font-size: 40px;
+    color: goldenrod;
+    padding: 10px 0px;
+}
+
+footer
+{
+    background-color: #000000;
+    padding: 1px;
+    text-align: center;
+}
+
+.container
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(20px,1fr));
+    gap: 3px;
+    grid-auto-rows: minmax(30px,auto);
+    grid-auto-columns: minmax(80px,auto);
+    align-content: stretch;
+}
+
+.items
+{
+    align-items: center;
+    margin: 2px 5px;
+}
+
+#item1
+{
+    grid-column-start: 1;
+    grid-column-end: 19;
+    font-size: 18px;
+}
+
+#item2
+{
+    grid-row-start: 15;
+    grid-row-end: 24;
+    grid-column-start: 1;
+    grid-column-end: 19;
+    font-size: 20px;
+    text-align: justify;
+
+}
+
+#item3
+{
+    grid-row-start: 2;
+    grid-row-end: 15;
+    grid-column-start: 1;
+    grid-column-end: 19;
+    font-size: 12px;
+}
+
+.moment
+{
+    font-size: 38px;
+    color: goldenrod;
+    padding: 3px 0px;
+    margin-left: 3px;
+}
+
+.img4
+{
+    display: inline-block;
+    width: 412px;
+    height: 180px;
+    margin-left: 0px;
+    margin-top: 1.5rem;
+}
+
+.imgg
+{
+    width: 412px;
+    height: 182px;
+    border-radius: 1rem;
+}
+
+.img5
+{
+    height: 400px;
+    border-radius: 1rem;
+
+}
+
+.containerevent
+{
+    display: block;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.event
+{
+    width: 20rem;
+    height: 15rem;
+    background-color: rgb(249, 252, 254);
+    border-radius: 1rem;
+    border: none;
+    box-shadow: 8px 8px 10px rgb(225, 238, 250);
+    display: flex;
+    flex-direction: column;
+    margin-left: 2rem;
+}
+
+#register-now
+{
+    font-size: 2rem;
+    text-align: center;
+    color: rgb(217, 217, 224);
+    background-color:rgb(50, 50, 119);
+    padding: 1rem;
+}
+
+.ename
+{
+    font-size: 1.2rem;
+    font-weight: 400;
+    padding: 1rem;
+    color:rgb(50, 50, 119);
+}
+
+.descevent
+{
+    font-size: 1rem;
+    margin: -0.5rem 1rem 0.5rem 1rem;
+    font-display: justify;
+}
+
+.venueevent
+{
+    font-size: 1.1rem;
+    margin: 0.5rem 1rem;   
+}
+
+a #imgplus
+{
+    position: absolute;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin-left: 16rem;
+    margin-top: -1rem;
+    align-content: flex-end;
+}
+
+.container-newacc
+{
+    width: 22rem;
+    height: 37rem;
+    background-color: aliceblue;
+    border-radius: 2rem;
+    box-shadow: 10px 10px 30px rgb(210, 209, 209);
+    display: flex;
+    gap: 1.5rem;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    margin: 7rem 2rem;
+}
+
+.container-newacc-child
+{
+    padding: 1.2rem;
+    border-radius: 1rem;
+    border: 1px gainsboro;
+    width: 18rem;
+}
+
+.flexxacc
+{
+    display: flex;
+    gap: 0.8rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-newacc-child2
+{
+    padding: 0.8rem;
+    border-radius: 1rem;
+    border: 1px gainsboro;
+    width: 11rem;
+}
+
+.createheading
+{
+    font-size: 2.5rem;
+    color: rgb(50, 50, 119);
+    padding: 1rem;
+}
+
+.createbtn
+{
+    padding: 0.8rem;
+    font-size: 1.2rem;
+    width: 18rem;
+    border-radius: 2rem;
+    border: none;
+    background-color: rgb(214, 225, 235);
+}
 
 } 
+
