--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ section
 nav
 {
     width: 100%;
-    padding: 21px;
+    padding: 15px;
     background-color: rgb(50, 50, 119);
     display: inline-block;
     margin: 0;
@@ -339,22 +339,22 @@ nav
 
 #nav-first
 {
-    font-size: 4.5rem;
+    font-size: 4.3rem;
     display: block;
-    padding-bottom: 1.8rem;
+    padding-bottom: 1.7rem;
 }
 
 .nav-items
 {
     color: aliceblue;
-    font-size: 20px;
+    font-size: 25px;
     margin-right: 15%;
 }
 
 .img1
 {
     width: 100%;
-    height: 750px;
+    height: 900px;
     mask-image: linear-gradient(to bottom,#000000 50%,transparent 100%);
 }
 
@@ -362,13 +362,13 @@ nav
 {
     font-size: 5rem;
     color: goldenrod;
-    padding: 10px 0px;
+    padding: 10px 15px;
 }
 
 footer
 {
     background-color: #000000;
-    padding: 1px;
+    padding: 10px;
     text-align: center;
     width: 200%;
 }
@@ -388,8 +388,6 @@ footer
 
 #item1
 {
-    grid-column-start: 1;
-    grid-column-end: 19;
     font-size: 18px;
 }
 
@@ -397,6 +395,7 @@ footer
 {
     margin-top: 1rem;
     padding: 0.5rem;
+    font-size:1.5rem ;
 }
 
 #item3
@@ -425,7 +424,7 @@ footer
 {
     width: 100%;
     height: 100%;
-    border-radius: 5rem;
+    border-radius: 2rem;
     margin-top: 1rem;
 }
 
@@ -500,17 +499,17 @@ a #imgplus
 
 .container-newacc
 {
-    width: 22rem;
-    height: 37rem;
+    width: 90%;
+    height: auto;
     background-color: aliceblue;
+    box-shadow: 8px 8px 10px rgb(225, 238, 250);
     border-radius: 2rem;
     display: flex;
     gap: 1.5rem;
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    margin: 25% 15%;
-    margin-right: 2rem;
+    margin: 10%;
 }
 
 .container-newacc-child
@@ -518,7 +517,7 @@ a #imgplus
     padding: 1.2rem;
     border-radius: 1rem;
     border: 1px gainsboro;
-    width: 18rem;
+    width: 80%;
 }
 
 .flexxacc
