--- a/style.css
+++ b/style.css
@@ -509,7 +509,7 @@ a #imgplus
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    margin: 10% 10%;
+    margin: 2%;
 }
 
 .container-newacc-child
