--- a/style.css
+++ b/style.css
@@ -507,7 +507,7 @@ a #imgplus
     display: flex;
     gap: 1.5rem;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     margin: 10%;
 }
