--- a/style.css
+++ b/style.css
@@ -551,6 +551,7 @@ a #imgplus
     border-radius: 2rem;
     border: none;
     background-color: rgb(214, 225, 235);
+    margin-bottom: 4%;
 }
 }
  
