--- a/style.css
+++ b/style.css
@@ -119,22 +119,23 @@ footer p{
 {
     font-size: 50px;
     color: goldenrod;
-    padding: 30px 0px;
+    padding: 10px 0px;
     margin-left: 30px;
 }
 
 .img4
 {
     display: inline-block;
-    width: 950px;
+    width: 1050px;
     height: 500px;
-    margin-left: 240px;
+    margin-left: 100px;
 }
 
 .imgg
 {
-    width: 420px;
+    width: 500px;
     height: 230px;
+    margin: 10px;
 }
 
 #login
