--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ nav
 footer
 {
     background-color: #000000;
-    padding: 10px;
+    padding: 30px;
     text-align: center;
     width: 200%;
 }
@@ -423,10 +423,11 @@ footer
 
 .imgg
 {
-    width: 100%;
+    width: 95%;
     height: 100%;
     border-radius: 2rem;
     margin-top: 1rem;
+    padding: 1rem;
 }
 
 .img5
