--- a/style.css
+++ b/style.css
@@ -316,6 +316,16 @@ a #imgplus
     background-color: rgb(214, 225, 235);
 }
 
+.createbtn:hover
+{
+    padding: 0.8rem;
+    font-size: 1.2rem;
+    width: 18rem;
+    border-radius: 2rem;
+    border: none;
+    background-color: rgb(50, 50, 119);
+    color: #fefefe;
+}
 
 @media screen and (max-width: 600px) and (max-height: 950px) 
 {
@@ -553,6 +563,19 @@ a #imgplus
     border-radius: 2rem;
     border: none;
     background-color: rgb(214, 225, 235);
+    margin-bottom: 4%;
+}
+
+
+.createbtn:hover
+{
+    padding: 0.8rem;
+    font-size: 1.2rem;
+    width: 18rem;
+    border-radius: 2rem;
+    border: none;
+    background-color: rgb(50, 50, 119);
+    color: #fefefe;
     margin-bottom: 4%;
 }
 }
